# expo-crypto-argon2

./: .gitignore  ExpoCryptoArgon2.podspec  README.md  biome.json  expo-module.config.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  release.yml
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: argon2-jni.cpp
android/src/main/java/expo/modules/cryptoargon2/: ExpoCryptoArgon2Module.kt
ios/: Argon2Wrapper.h  Argon2Wrapper.mm  ExpoCryptoArgon2Module.swift
src/: expo-modules-core.d.ts  index.ts
